--- a/src/components/Layout/Popper/Menu/menu.module.scss
+++ b/src/components/Layout/Popper/Menu/menu.module.scss
@@ -14,7 +14,9 @@
 .menu-popper {
     padding-bottom: 8px;
 }
-
+.menu-body{
+    overflow-y: auto;
+}
 .menu-item {
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
@@ -30,6 +32,7 @@
     position: relative;
     height: 50px;
     margin-top: -8px;
+    flex-shrink: 0;
 }
 
 .back-btn {
