--- a/src/components/Layout/Popper/Popper.module.scss
+++ b/src/components/Layout/Popper/Popper.module.scss
@@ -6,8 +6,7 @@
     padding-top: 8px;
     background: rgb(255,255,255);
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
-}
 
-.search-title{
-    
+    display: flex;
+    flex-direction: column;
 }
