--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -4,10 +4,15 @@
     --search-top-spacer: 9px;
     --search-button-width: 52px;
     width: 100%;
-    height: var(--default-layout-header-height, 60px);
+    height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
+    z-index: 10;
+    background-color: var(--white);
     justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .inner {
